// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyCardComponent Rendering Should render 1`] = `
<yoo-property-card
  class="hydrated"
  data-yoo-property-card-host=""
>
  
  
</yoo-property-card>
`;

exports[`PropertyCardComponent Rendering Should render as chart 1`] = `
<yoo-property-card
  class="hydrated"
  data-yoo-property-card-host=""
>
  
  <div
    data-yoo-property-card=""
  >
    <div
      class="details"
      data-yoo-property-card=""
    >
      <div
        class="details-title"
        data-yoo-property-card=""
      >
        Chart Title
      </div>
      <div
        class="description p-type-chart"
        data-yoo-property-card=""
      >
        
        <div
          data-yoo-property-card=""
        />
        
      </div>
    </div>
  </div>
</yoo-property-card>
`;

exports[`PropertyCardComponent Rendering Should render as columns 1`] = `
<yoo-property-card
  class="hydrated"
  data-yoo-property-card-host=""
>
  
  <div
    data-yoo-property-card=""
  >
    <div
      class="details"
      data-yoo-property-card=""
    >
      <div
        class="details-title"
        data-yoo-property-card=""
      >
        Chart title
      </div>
      <div
        class="description p-type-columns"
        data-yoo-property-card=""
      >
        <div
          data-yoo-property-card=""
        >
          <div
            class="p-column"
            data-yoo-property-card=""
          >
            <div
              class="number"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                4.1
              </span>
              <span
                data-yoo-property-card=""
              >
                %
              </span>
            </div>
            <div
              class="title"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                label column one
              </span>
            </div>
            <div
              class="circle bg-balanced"
              data-yoo-property-card=""
            />
          </div>
          <div
            class="p-column"
            data-yoo-property-card=""
          >
            <div
              class="number"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                63,5/76
              </span>
              
            </div>
            <div
              class="title"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                label column 2
              </span>
            </div>
            <div
              class="circle bg-assertive"
              data-yoo-property-card=""
            />
          </div>
          <div
            class="p-column"
            data-yoo-property-card=""
          >
            <div
              class="number"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                9.3
              </span>
              <span
                data-yoo-property-card=""
              >
                %
              </span>
            </div>
            <div
              class="title"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                label column 3
              </span>
            </div>
            <div
              class="circle bg-assertive"
              data-yoo-property-card=""
            />
          </div>
          <div
            class="p-column"
            data-yoo-property-card=""
          >
            <div
              class="number"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                82.9
              </span>
              <span
                data-yoo-property-card=""
              >
                %
              </span>
            </div>
            <div
              class="title"
              data-yoo-property-card=""
            >
              <span
                data-yoo-property-card=""
              >
                label column 4
              </span>
            </div>
            <div
              class="circle bg-energized"
              data-yoo-property-card=""
            />
          </div>
        </div>
        
      </div>
    </div>
  </div>
</yoo-property-card>
`;

exports[`PropertyCardComponent Rendering Should render as grid 1`] = `
<yoo-property-card
  class="hydrated"
  data-yoo-property-card-host=""
>
  
  <div
    data-yoo-property-card=""
  >
    <div
      class="details"
      data-yoo-property-card=""
    >
      <div
        class="details-title"
        data-yoo-property-card=""
      >
        Chart title
      </div>
      <div
        class="description p-type-grid"
        data-yoo-property-card=""
      >
        
        <div
          data-yoo-property-card=""
        >
          <div
            class="p-row header"
            data-yoo-property-card=""
          >
            
          </div>
          <div
            class="p-row undefined"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 3 
            </span>
            
          </div>
          <div
            class="p-row undefined"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 3 
            </span>
            
          </div>
          <div
            class="p-row assertive"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 3 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 3 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               Ferm. Except info DC 
            </span>
          </div>
          <div
            class="p-row undefined"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 4 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 3 
            </span>
            
          </div>
          <div
            class="p-row undefined"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 5 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 3 
            </span>
            
          </div>
          <div
            class="p-row undefined"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 6 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 1 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 2 
            </span>
            <span
              class=""
              data-yoo-property-card=""
            >
               value 3 
            </span>
            
          </div>
          <div
            class="p-row undefined"
            data-yoo-property-card=""
          >
            <span
              class=""
              data-yoo-property-card=""
            >
               Row 7 
            </span>
            
          </div>
        </div>
        
      </div>
    </div>
  </div>
</yoo-property-card>
`;

exports[`PropertyCardComponent Rendering Should render as html 1`] = `
<yoo-property-card
  class="hydrated"
  data-yoo-property-card-host=""
>
  
  <div
    data-yoo-property-card=""
  >
    <div
      class="details"
      data-yoo-property-card=""
    >
      <div
        class="details-title"
        data-yoo-property-card=""
      >
        Bloc title
      </div>
      <div
        class="description p-type-html"
        data-yoo-property-card=""
      >
        
        <div
          data-yoo-property-card=""
        >
          &lt;center&gt;This is a text&lt;/center&gt;
        </div>
      </div>
    </div>
  </div>
</yoo-property-card>
`;
